Fixed echo icon mobile resize

--- a/styles.css
+++ b/styles.css
@@ -1151,10 +1151,6 @@ button,input,textarea{font:inherit}
     bottom:42px;
   }
 
-  .funnel-core img{
-    width:64px;
-    height:64px;
-  }
 
   .ring-1{
     width:280px;
